Paket braket verwendet und \Set{|} verwendet.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3680 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -66,6 +66,7 @@
 \usepackage{pst-node}
 \usepackage{xypic}
 \usepackage{mathtools}
+\usepackage{braket}
 
 
 
@@ -347,8 +348,8 @@ wegweisenden Problemen in der Distributionentheorie aufgestellt. Diese löste
 Seien $X,Y$ normierte Räume und $T\colon X\rightarrow Y$ ein linearer
 Operator. Ein Hauptproblem der Funktionalanalysis besteht darin, Gleichungen
 der Form $Tx=y$ mit gesuchtem $x$ zu lösen. Man bezeichnet mit
-$N(T)\coloneqq \ker(T)\coloneqq \{x\in X\colon Tx=0\}$ den \highl{Nullraum} oder
-\highl{Kern} von $T$. Weiter ist $R(T)\coloneqq \{Tx\colon x\in X\}$ der
+$N(T)\coloneqq \ker(T)\coloneqq \Set{x\in X |  Tx=0}$ den \highl{Nullraum} oder
+\highl{Kern} von $T$. Weiter ist $R(T)\coloneqq \Set{Tx |  x\in X}$ der
 \highl{Bildraum} oder \highl{Bild} von $T$.
 
 Wie ist die obige Situation in endlicher Dimension? Die Dimension von $X$ und
@@ -369,8 +370,8 @@ folgende Charakterisierung:
   \label{eq:11}
      R(T)= N(T')_{\perp}
 \end{gather}
-Dabei ist $N(T')_{\perp}\coloneqq  \{y\in\K^{m}\colon\forall b\in
-N(T')\colon\langle y,b\rangle=0\}$ und $\langle\cdot,\cdot\rangle$ ist das
+Dabei ist $N(T')_{\perp}\coloneqq  \Set{y\in\K^{m} | \forall b\in
+N(T')\colon\langle y,b\rangle=0}$ und $\langle\cdot,\cdot\rangle$ ist das
 Skalarprodukt in $\K^{m}$. Die Aussage aus \autoref{eq:11} besagt, dass die
 Gleichung $Tx=y$ lösbar ist, falls die rechte Seite $y$ orthogonal zu allen
 Lösungen $b$ der homogenen Gleichung $T'b=0$ steht.
@@ -389,8 +390,8 @@ Banachraum $X$ in einen Banachraum $Y$ gilt die Beziehung:
 Dabei bezeichnet $\cl R(T)$ den Abschluss des Bildes $R(T)$ in $Y$ und
 $T'\colon Y'\rightarrow X'$ ist der so genannte duale Operator von $T$, der
 den dualen Banachraum $Y'$ in den dualen Banachraum $X'$ abbildet. Hier ist
-$N(T')_{\perp}\coloneqq \{y\in Y\colon\forall b\in N(T')\colon\langle
-y,b\rangle\coloneqq b(y)=0\}$. Die $b\colon Y\rightarrow\K$ sind lineare
+$N(T')_{\perp}\coloneqq \Set{y\in Y |\forall b\in N(T')\colon\langle
+y,b\rangle\coloneqq b(y)=0}$. Die $b\colon Y\rightarrow\K$ sind lineare
 Funktionale und $T'b=0$.
 
 Die Beziehung aus \autoref{eq:12} impliziert, dass für einen stetigen linearen
@@ -459,7 +460,7 @@ K(s,t) x(t)\,dt$ und $T\coloneqq I-S$.
       0\\ 0
     \end{pmatrix}$. Umstellen ergibt, $b_{2}=b_{3}, b_{1}=-2b_{2}=-2b_{3}$.
     Dabei ist $b_{3}$ beliebig. Wir setzen $b_{3}=\alpha$. Nun gilt, $N(T')=
-    \{b=\begin{pmatrix}-2\alpha\\ \alpha\\ \alpha\end{pmatrix}\colon
+    \Set{b=\begin{pmatrix}-2\alpha\\ \alpha\\ \alpha\end{pmatrix} |
       \alpha\in\K\}$. Also $\langle y,b\rangle= -2\overline{\alpha}\eta_{1}+
     \overline{\alpha}\eta_{2}+ \overline{\alpha}\eta_{3}$. Für
     $\K=\R$ kann man den Überstrich weglassen.
@@ -479,8 +480,8 @@ K(s,t) x(t)\,dt$ und $T\coloneqq I-S$.
    \item[\highl{lineare Hülle}] Sei $M$ eine nichtleere Teilmenge von
      $X$. Dann ist
     \begin{gather*}
-      \spn(M)\coloneqq \left\{\sum_{i=1}^{n} \alpha_{i}x_{i}\colon \alpha_{i}\in\K,
-	 x_{i}\in M, n\in\N\right\}
+      \spn(M)\coloneqq \Set{\sum_{i=1}^{n} \alpha_{i}x_{i} | \alpha_{i}\in\K,
+	 x_{i}\in M, n\in\N\right}
     \end{gather*}
     die lineare Hülle von $M$.
    \item[\highl{linear abhängig}] Die Vektoren $x_{1},\dotsc, x_{n}\in X$ heißen genau
@@ -510,17 +511,17 @@ K(s,t) x(t)\,dt$ und $T\coloneqq I-S$.
 
 Sei $X$ ein Vektorraum und $\norm{\cdot}\colon X\rightarrow[0,\infty)$ eine
 Norm auf $X$. Das Paar $[X, \norm{\cdot}]$ heißt
-\highl[Raum!normierter]{normierter Raum}. Man bezeichnet $B_{X}\coloneqq \{x\in
-X\colon\norm{x}\leq1\}$ als
+\highl[Raum!normierter]{normierter Raum}. Man bezeichnet $B_{X}\coloneqq \Set{x\in
+X | \norm{x}\leq1}$ als
 \highl[Einheitskugel!abgeschlossene]{abgeschlossene Einheitskugel} und
-$\mathring{{B}}_{X}\coloneqq \{x\in X\colon\norm{x}<1\}$ als
+$\mathring{{B}}_{X}\coloneqq \Set{x\in X | \norm{x}<1}$ als
 \highl[Einheitskugel!offene]{offene Einheitskugel}. Für $A,B\subset X$ ist
-$A+B\coloneqq \{a+b\colon a\in A,b\in B\}$ die \highl[Menge!Summe]{Summe zweier
-Mengen} und $B_{\epsilon}(x_{0})\coloneqq  \{x\in
-X\colon\norm{x-x_{0}}\leq\epsilon\}= \{x_{0}\}+\epsilon B_{X}$
+$A+B\coloneqq \Set{a+b |  a\in A,b\in B}$ die \highl[Menge!Summe]{Summe zweier
+Mengen} und $B_{\epsilon}(x_{0})\coloneqq  \Set{x\in
+X |\norm{x-x_{0}}\leq\epsilon}= \{x_{0}\}+\epsilon B_{X}$
 \highl[$\epsilon$"~Kugel!abgeschlossene]{abgeschlossene $\epsilon$"~Kugel} mit
-Mittelpunkt $x_{0}$. Es ist $\mathring{{B}}_{\epsilon}(x_{0})\coloneqq  \{x\in
-X\colon\norm{x-x_{0}}<\epsilon\}= \{x_{0}\}+\epsilon B_{X}$
+Mittelpunkt $x_{0}$. Es ist $\mathring{{B}}_{\epsilon}(x_{0})\coloneqq  \Set{x\in
+X | \norm{x-x_{0}}<\epsilon}= \{x_{0}\}+\epsilon B_{X}$
 \highl[$\epsilon$"~Kugel!offene]{offene $\epsilon$"~Kugel} mit
 Mittelpunkt $x_{0}$. Die Menge $M\subseteq X$ heißt genau dann
 \highl[Menge!offene]{offen}, wenn es zu jedem $x\in M$ ein $\epsilon>0$ mit
@@ -565,17 +566,17 @@ n_{\epsilon}\in\N\forall n\geq n_{\epsilon}\colon\norm{x_{n}-x}\leq\epsilon$.
   Die \highl[Hülle!abgeschlossene]{abgeschlossene Hülle} von $M\subseteq X$
   ist definiert als:
   \begin{align*}
-    \cl(M)\coloneqq  \bigcap_{N\supseteq M} N &=\{x\in X\colon\forall N
-       (N\supseteq M\Rightarrow x\in N)\}\\
-       &= \{x\in X\colon\exists
-       (x_{n})\subset M\colon x_{n}\xrightarrow{n\rightarrow\infty} x\}
+    \cl(M)\coloneqq  \bigcap_{N\supseteq M} N &=\Set{x\in X | \forall N
+       (N\supseteq M\Rightarrow x\in N)}\\
+       &= \Set{x\in X | \exists
+       (x_{n})\subset M\colon x_{n}\xrightarrow{n\rightarrow\infty} x}
   \end{align*}
   Das \highl{Innere} oder \highl{Kern} von $M\subseteq X$ ist
   definiert als:
   \begin{gather*}
     \inner (M)\coloneqq \bigcup_{\substack{N\subseteq M\\
-        \text{offen}}} N= \{x\colon\exists N(N\subseteq M\wedge x\in
-    N)\}
+        \text{offen}}} N= \Set{x | \exists N(N\subseteq M\wedge x\in
+    N)}
   \end{gather*}
 \end{defini}
 
@@ -715,8 +716,8 @@ normierter Räume.
 \begin{defini}[Entropiezahl]
   Sei $M\subset X$ beschränkt. Dann heißt die Größe:
   \begin{gather*}
-    \CE_{n}(M)\coloneqq  \inf\left\{\epsilon\geq0\colon \exists s_{1},\dotsc, s_{n}\in
-       X\colon M\subset\bigcup_{i=1}^{n}(\{s_{i}\}+\epsilon B_{x})\right\}
+    \CE_{n}(M)\coloneqq  \inf\Set{\epsilon\geq0 | \exists s_{1},\dotsc, s_{n}\in
+       X\colon M\subset\bigcup_{i=1}^{n}(\{s_{i}\}+\epsilon B_{x})}
   \end{gather*}
   die $n$"~te \highl{Entropiezahl} von $M$.
 \end{defini}
@@ -768,9 +769,9 @@ normierter Räume.
 % In dem Abschnitt ist keine Rede von normierten Räumen. Daher einen
 % Teil der Überschrift entfernt
 
-Sei $(X,d)$ ein metrischer Raum. Dann ist $B(s,\epsilon)\coloneqq \{A\in X\colon
-d(A,s)\leq\epsilon\}$ die abgeschlossene $\epsilon$-Kugel mit Mittelpunkt $s$
-und $\mathring{B}(s,\epsilon)\coloneqq \{A\in X\colon d(A,s)<\epsilon\}$ die
+Sei $(X,d)$ ein metrischer Raum. Dann ist $B(s,\epsilon)\coloneqq \Set{A\in X |
+d(A,s)\leq\epsilon}$ die abgeschlossene $\epsilon$-Kugel mit Mittelpunkt $s$
+und $\mathring{B}(s,\epsilon)\coloneqq \Set{A\in X |  d(A,s)<\epsilon}$ die
 offene $\epsilon$"~Kugel. Eine Teilmenge $M\subseteq X$ heißt genau dann
 \highl{beschränkt}, wenn es ein $\epsilon>0$ und $s\in X$ mit $M\subseteq
 B(s,\epsilon)$ gibt.
@@ -876,8 +877,8 @@ B(s,\epsilon)$ gibt.
     \begin{enumerate}[(i)]
      \item Für $\epsilon=1$ existieren $s_{1},\dotsc, s_{n}\in M$ mit
       $M\subseteq\bigcup_{i=1}^{n} B(s_{i}, 1)$. Wir setzen für den maximalen
-      Abstand der Mittelpunkte $r\coloneqq \max\{d(s_{i}, s_{j})\colon1\leq i,j
-      \leq n\}$. Dann gilt $M\subseteq B(s_{1}, r+1)$, d.\,h. $M$ ist
+      Abstand der Mittelpunkte $r\coloneqq \max\Set{d(s_{i}, s_{j}) | \leq i,j
+      \leq n}$. Dann gilt $M\subseteq B(s_{1}, r+1)$, d.\,h. $M$ ist
       beschränkt. Denn für $A\in M$ existieren $s_{k}$ mit $d(A, s_{k})\leq1$.
       Damit folgt, $d(A,s_{1})\leq d(A,s_{k})+ d(s_{k}, s_{1})\leq1+r
       \Rightarrow A\in B(s_{1}, r+1)$.
@@ -894,7 +895,7 @@ B(s,\epsilon)$ gibt.
 
 \begin{bemerk}
   Die Umkehrung der obigen Folgerung gilt im Allgemeinen \emph{nicht}. Denn
-  sei $M=\{e_{i}= (0,0,\dotsc,0,1,0,\dotsc)\colon i\in\N\}\subseteq\ell_{p}$.
+  sei $M=\Set{e_{i}= (0,0,\dotsc,0,1,0,\dotsc) |  i\in\N}\subseteq\ell_{p}$.
   Es gilt, $\norm{e_{i}}_{p}=1$. Aber $(e_{i})$ enthält keine
   Cauchy"=Teilfolge, denn $\norm{e_{i}-e_{j}}_{p}=2^{\nicefrac{1}{p}}$ für
   $i\neq j$.
@@ -1020,7 +1021,7 @@ B(s,\epsilon)$ gibt.
       enthält $(z_{n})$ eine konvergente Teilfolge und nach \autoref{lem:i.22}
       ist $(z_{n})$ selbst kompakt, $z_{n}\rightarrow z_{0}\in X$. Damit
       existiert $i_{0}\colon z_{0}\in G_{i_{0}}$. Da $G_{i_{0}}$ offen, ist
-      $\alpha\coloneqq  \inf\{d(z,z_{0})\colon z\notin G_{i_{0}}\}>0$. Dann wäre
+      $\alpha\coloneqq  \inf\Set{d(z,z_{0}) |  z\notin G_{i_{0}}}>0$. Dann wäre
       $\alpha=0$, dann gäbe es eine Folge, die gegen $z_{0}$ konvergiert. Die
       Glieder liegen in der abgeschlossenen Menge $X\setminus G_{i_{0}}$ und
       somit läge auch $z_{0}$ in der Menge. Dies ist ein Widerspruch.
@@ -1335,8 +1336,8 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
     X=\cl(M)\subseteq\cl(\spn(M))\subseteq X$.
 
     Die Rückrichtung zeigen wir für $\K=\R$: Es ist klar, dass die Menge
-    $B\coloneqq \{\beta_{1}x_{1}+\dotsb+ \beta_{n}x_{n}\colon\beta_{i}\in\Q,
-    x_{i}\in M, n\in \N\}$ abzählbar ist. Wir zeigen nun, $\cl(B)=X$.
+    $B\coloneqq \Set{\beta_{1}x_{1}+\dotsb+ \beta_{n}x_{n} | \beta_{i}\in\Q,
+    x_{i}\in M, n\in \N}$ abzählbar ist. Wir zeigen nun, $\cl(B)=X$.
     Seien dazu $x\in X$ und $\epsilon>0$. Wegen $\cl(\spn(M))=X$
     existieren $x_{1},\dotsc, x_{m}\in M,
     \alpha_{1},\dotsc,\alpha_{m}\in\R\colon \norm{x-(\alpha_{1}x_{1}+\dotsb+
@@ -1371,42 +1372,42 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
   Sei $M\subseteq X$ ein abgeschlossener linearer Teilraum eines normierten
   Raumes $X$. Dann wird durch
   \begin{gather*}
-    \ndist{x}\coloneqq \inf\{\norm{x-y}\colon y\in M\}
+    \ndist{x}\coloneqq \inf\Set{\norm{x-y} |  y\in M}
   \end{gather*}
   eine Norm auf $\xm$ definiert. Ist $X$ ein Banachraum, so
   ist $\xm$ ebenfalls ein Banachraum. Es ist:
   \begin{align*}
-    [x]+[y] &\coloneqq  [x+y] & [x] &\coloneqq  \{x+y\colon y\in M\}\\
-    \alpha[x] &\coloneqq  [\alpha\cdot x] & \xm &\coloneqq  \{[x]\colon x\in X\}
+    [x]+[y] &\coloneqq  [x+y] & [x] &\coloneqq  \Set{x+y |  y\in M}\\
+    \alpha[x] &\coloneqq  [\alpha\cdot x] & \xm &\coloneqq  \Set{[x] |  x\in X}
   \end{align*}
   \begin{proof}
     \begin{enumerate}[1.\,Schr{i}tt]
      \item $\ndist{\cdot}$ ist wohldefiniert, d.\,h. unabhängig von
       Repräsentanten. Denn für $[x_{1}]=[x_{2}]\Rightarrow \exists y\in
       M\colon x_{1}=x_{2}+y\Rightarrow\ndist{x_{1}}= \ndist{x_{2}+y}=
-      \inf\{\norm{x_{2}+y-z}\colon z\in M\}= \inf\{\norm{x_{2}-(z-y)}\colon
-      z\in M\}= \inf\{\norm{x_{2}-w}\colon w\in M\}= \ndist{x_{2}}$.
+      \inf\Set{\norm{x_{2}+y-z} |  z\in M}= \inf\Set{\norm{x_{2}-(z-y)} |
+      z\in M}= \inf\Set{\norm{x_{2}-w} |  w\in M}= \ndist{x_{2}}$.
      \item Wir müssen nun die Normeigenschaften prüfen: Es ist klar, dass
       $\ndist{x}\geq0$ gilt. Es ist
-      $\ndist{x}=0\Leftrightarrow\inf\{\norm{x-y}\colon y\in M\}=0 \Rightarrow
+      $\ndist{x}=0\Leftrightarrow\inf\Set{\norm{x-y} |  y\in M}=0 \Rightarrow
       x\in M$. Denn $M$ ist abgeschlossen und somit gibt es eine Folge, die
       gegen $x$ konvergiert. Insgesamt ergibt sich $[x]=0$.
 
       Die Homogenität lässt sich wie folgt zeigen: Sei $x\in X,
       \alpha\in\K\setminus\{0\}$. Dann gilt, $\norm{\alpha[x]}=
-      \inf\{\norm{\alpha x-y}\colon y\in M\}= \inf\{\abs{\alpha}
-      \norm{x-\nicefrac{1}{\alpha} y}\colon y\in M\}=\abs{\alpha}
-      \inf\{\norm{x-\nicefrac{1}{\alpha} y}\colon y\in M\}=\abs{\alpha}
+      \inf\Set{\norm{\alpha x-y} |  y\in M}= \inf\Set{\abs{\alpha}
+      \norm{x-\nicefrac{1}{\alpha} y} | y\in M}=\abs{\alpha}
+      \inf\Set{\norm{x-\nicefrac{1}{\alpha} y} |  y\in M}=\abs{\alpha}
       \cdot\ndist{x}$.
 
       Zuletzt ist noch die Dreiecksungleichung zu zeigen:
       \begin{align*}
-	\norm{[x]+[y]} &= \ndist{x+y}= \inf\{\norm{x+y-z}\colon z\in M\}\\
-	&= \inf\{\norm{x+y-z_{1}-z_{2}}\colon z_{1}, z_{2}\in M\}\\
-	&=\inf\{\norm{(x-z_{1})+ (y-z_{2})}\colon z_{1}, z_{2}\in M\}\\
-	&\leq \inf\{\norm{(x-z_{1})}+ \norm{y-z_{2})}\colon z_{1}, z_{2}\in M\}\\
-	&= \inf\{\norm{x-z_{1}}\colon z_{1}\in M\}+
-	   \inf\{\norm{y-z_{2}}\colon z_{2}\in M\}\\
+	\norm{[x]+[y]} &= \ndist{x+y}= \inf\Set{\norm{x+y-z} |  z\in M}\\
+	&= \inf\Set{\norm{x+y-z_{1}-z_{2}} |  z_{1}, z_{2}\in M}\\
+	&=\inf\Set{\norm{(x-z_{1})+ (y-z_{2})} |  z_{1}, z_{2}\in M}\\
+	&\leq \inf\Set{\norm{(x-z_{1})}+ \norm{y-z_{2})} |  z_{1}, z_{2}\in M}\\
+	&= \inf\Set{\norm{x-z_{1}} |  z_{1}\in M}+
+	   \inf\Set{\norm{y-z_{2}} |  z_{2}\in M}\\
 	&= \ndist{x}+ \ndist{y}
       \end{align*}
      \item Mit der Anwendung des Vollständigkeitskriteriums
@@ -1447,7 +1448,7 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
       $\norm{Q_{M}x}=\ndist{x}\leq\norm{x}<1\Rightarrow
       Q_{M}x\in\mathring{B}_{\xm}$.
      \item["`$\supseteq$"'] Sei $[x]\in\mathring{B}_{\xm}$, d.\,h. $\ndist{x}=
-      \inf\{\norm{x-z}\colon z\in M\}<1$. Dann existiert $z_{0}\in
+      \inf\Set{\norm{x-z} |  z\in M}<1$. Dann existiert $z_{0}\in
       M\colon\norm{x-z_{0}}<1$. Wir setzen $y\coloneqq x-z_{0}$. Dann ist
       $y\in\mathring{B}_{X}$ und es gilt, $Q_{M}y= [y]= [x-z_{0}]= [x]-
       \underbrace{[z_{0}]}_{=0}=[x]$, d.\,h. $Q_{M}\mathring{B}_{X}\supseteq
@@ -1501,7 +1502,7 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
    \item Sei $X$ ein normierter Raum und $M\subsetneq X$ ein abgeschlossener linearer
     Teilraum. Dann existiert zu jedem $\epsilon>0$ ein $x_{\epsilon}\in X$ mit
     $\norm{x_{\epsilon}}=1$ und
-    $\norm{Q_{M}x_{\epsilon}}=\inf\{\norm{x_{\epsilon} -z}\colon z\in M\} \geq
+    $\norm{Q_{M}x_{\epsilon}}=\inf\Set{\norm{x_{\epsilon} -z} |  z\in M} \geq
     1- \epsilon$.
    \item Ist $\dim X<\infty$, dann existiert ein $x\in X$ mit $\norm{x}=1$ und
     $\norm{Q_{M}x}=1$.
@@ -1526,7 +1527,7 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
      \item Sei $\dim X<\infty$. Für $\epsilon_{n}=\nicefrac{1}{n}$ existiert
       nach dem obigen Punkt ein $x_{n}\in X\colon\norm{x_{n}}=1$ und
       $\norm{Q_{M}x_{n}}\geq1-\epsilon_{n}= 1-\nicefrac{1}{n}$. Die
-      Einheitssphäre $\partial B_{X}\coloneqq \{x\in X\colon\norm{x}=1\}$ ist
+      Einheitssphäre $\partial B_{X}\coloneqq \Set{x\in X | \norm{x}=1}$ ist
       abgeschlossen und da $\dim X<\infty$ ist sie kompakt. Damit existiert
       eine konvergente Teilfolge $(x_{n_{k}})\subset(x_{n})\colon
       x_{n_{k}}\rightarrow x\in\partial B$. Für alle $z\in M$ gilt,
@@ -1547,8 +1548,8 @@ $X=[\R^{2}, \norm{\cdot}_{2}]$.
   linearer Teilraum $M\subsetneq X$, sodass für beliebige $x\in\partial
   B\colon\norm{Q_{M} x}<1$.
 
-  Ein Beispiel hierfür ist $X\coloneqq \{x\in C[0,1]\colon x(1)=0\}$ und
-  $M\coloneqq \{x\in X\colon\int_{0}^{1} x(t)\,dt=0\}$.
+  Ein Beispiel hierfür ist $X\coloneqq \Set{x\in C[0,1] |  x(1)=0}$ und
+  $M\coloneqq \Set{x\in X | \int_{0}^{1} x(t)\,dt=0}$.
 \end{bemerk}
 
 
@@ -1586,7 +1587,7 @@ $X=[\R^{2}, \norm{\cdot}_{2}]$.
 %lem I.5.2
 \begin{lem}
   Sei $X$ ein normierter Raum. Dann ist die Sphäre $\partial
-  B_{X}\coloneqq \{x\in X\colon\norm{x}=1\}$ abgeschlossen.
+  B_{X}\coloneqq \Set{x\in X | \norm{x}=1}$ abgeschlossen.
   \begin{proof}
     Sei $(x_{n})\subset\partial B_{X}\colon x_{n}\rightarrow x\in X\Rightarrow
     x\in\partial B_{X}$ wegen $\abs{\norm{x}-1}= \abs{ \norm{x}-
@@ -1620,8 +1621,8 @@ $X=[\R^{2}, \norm{\cdot}_{2}]$.
 
     Nun zeigen wir, dass ein $m>0$ für alle $x\in X$ mit
     $m\norm{x}_{0}\leq\norm{x}$ existiert. Sei $\partial B_{\ell^{n}_{\infty}}
-    =\{\lambda= (\lambda_{1},\dotsc,\lambda_{n})\in\K^{n}\colon
-    \norm{\lambda}_{\infty}= \max_{1\leq i\leq n} \abs{\lambda_{i}}=1\}$ die
+    =\Set{\lambda= (\lambda_{1},\dotsc,\lambda_{n})\in\K^{n} |
+    \norm{\lambda}_{\infty}= \max_{1\leq i\leq n} \abs{\lambda_{i}}=1}$ die
     Einheitssphäre von $\ell^{n}_{\infty}=(\K^{n}, \norm{\cdot}_{\infty})$.
     Sie ist kompakt, da sie beschränkt und abgeschlossen ist (nach
     \autoref{satz:i.212}). Wir definieren die Funktion $f\colon\partial
@@ -1669,8 +1670,8 @@ $X=[\R^{2}, \norm{\cdot}_{2}]$.
   \end{enumerate}
   \begin{proof}
 Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
-      $X$. Dann ist $X=\{\sum_{i=1}^{n} \lambda_{i} x_{i}\colon\lambda=
-      (\lambda_{1},\dotsc,\lambda_{N})\in\K\}$. Nach \autoref{satz:i.53} ist
+      $X$. Dann ist $X=\Set{\sum_{i=1}^{n} \lambda_{i} x_{i} | \lambda=
+      (\lambda_{1},\dotsc,\lambda_{N})\in\K}$. Nach \autoref{satz:i.53} ist
       die Norm $\norm{x}= \max_{1\leq i\leq N} \abs{\lambda_{i}}$ äquivalent
       zur ursprünglichen Norm. Damit gelten folgende Abschätzungen:
       $m\norm{\lambda}_{\infty}= m\norm{x}_{o}\leq \norm{x}\leq M\norm{x}_{o}=
@@ -1769,9 +1770,9 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
    \item Ist $Y=(\K,\abs{\cdot})$, so heißen die linearen Operatoren $T\colon
     X\rightarrow Y$ \highl[Funktional!lineares]{lineare Funktionale}. Man
     schreibt häufig $Tx$ statt $T(x)$.
-   \item Mit $N(T)\coloneqq \ker(T)\coloneqq \{x\in X\colon Tx=0\}$ wird der
-    \highl{Nullraum} oder  \highl{Kern} und mit $R(T)\coloneqq \{Tx\colon x\in
-    X\}$ wird der \highl{Bildraum} von $T$ bezeichnet.
+   \item Mit $N(T)\coloneqq \ker(T)\coloneqq \Set{x\in X |  Tx=0}$ wird der
+    \highl{Nullraum} oder  \highl{Kern} und mit $R(T)\coloneqq \Set{Tx | x\in
+    X}$ wird der \highl{Bildraum} von $T$ bezeichnet.
   \end{enumerate}
 \end{defini}
 
@@ -1840,12 +1841,12 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
   T)x\coloneqq \alpha (Tx)$ für $x\in X$ definiert. Es sind $S+T$ und $\alpha
   T$ lineare Operatoren.
 
-  Der Raum $\CL_{0}(X,Y)\coloneqq \{T\colon X\rightarrow Y\colon T\text{
-  linear}\}$ ist wieder ein Vektorraum.
+  Der Raum $\CL_{0}(X,Y)\coloneqq \Set{T\colon X\rightarrow Y | T\text{
+  linear}}$ ist wieder ein Vektorraum.
 \end{defini}
 
 
-Seien $\CL(X,Y)\coloneqq \{T\colon X\rightarrow Y\colon T\text{ beschränkter
+Seien $\CL(X,Y)\coloneqq \Set{T\colon X\rightarrow Y | T\text{ beschränkter
 linearer Operator}\}$ sowie $X$ und $Y$ normierte Räume.
 
 %satz II.2.1
@@ -2042,8 +2043,8 @@ N(T)$.
     Es gilt: $J_{R(T)} T_{0} Q_{N(T)}x= J_{R(T)}T_{0}[x]= J_{R(T)}Tx=
     Tx\Rightarrow J_{R(T)}T_{0}Q_{N(T)}=T$ für alle $x\in X$. Damit folgt,
     dass $T=J_{R(T)} T_{0} Q_{N(T)}$. Es ist $\norm{Q_{N(T)}}\leq1$.
-    Denn: $\norm{Q_{N(T)}x}= \ndist{x}= \inf\{\norm{x-z}\colon z\in
-    N(T)\}\leq\norm{x}\Rightarrow\norm{Q_{N(T)}}\leq1$. Im Fall $T\neq0$ ist
+    Denn: $\norm{Q_{N(T)}x}= \ndist{x}= \inf\Set{\norm{x-z} | z\in
+    N(T)}\leq\norm{x}\Rightarrow\norm{Q_{N(T)}}\leq1$. Im Fall $T\neq0$ ist
     $N(T)\subsetneq X$. Daher existiert ein $x\in X$ mit $[x]\neq0$ und somit folgt:
     $\ndist{x}= \norm{Q_{N(T)}x}= \norm{Q_{N(T)}(x-z)}\leq \norm{Q_{N(T)}}
     \norm{x-z}$ für $z\in N(T)$. Es folgt weiter, $0<\ndist{x}\leq
@@ -2362,14 +2363,14 @@ Beweises müssen wir ein Lemma benutzen:
 	$\lambda>0$. Dann gilt \autoref{eq:33} genau dann, wenn $\lambda
 	r\leq\norm{u+\lambda x_{0}}-a(u)\Leftrightarrow
 	r\leq\norm{\nicefrac{u}{\lambda}
-	+x_{0}}-a(\nicefrac{u}{\lambda})\Leftrightarrow r\leq\inf\{\norm{v+x_{0}}
-	-a(v)\colon v\in M\}$ für $v=\nicefrac{u}{\lambda}$. Für $\lambda<0$
+	+x_{0}}-a(\nicefrac{u}{\lambda})\Leftrightarrow r\leq\inf\Set{\norm{v+x_{0}}
+	-a(v) | v\in M}$ für $v=\nicefrac{u}{\lambda}$. Für $\lambda<0$
 	ist \autoref{eq:33} äquivalent zu $\lambda r=
 	(-\lambda)(-r)\leq\norm{u+\lambda x_{0}}-a(u)\Leftrightarrow-r\leq
 	\norm{\frac{u}{-\lambda}-x_{0}} -a(\frac{u}{-\lambda})\Leftrightarrow
 	r\geq a(\frac{u}{-\lambda})- \norm{\frac{u}{-\lambda} -x_{0}}$ für
 	alle $u\in M$. Das ist gleichbedeutend mit
-	$r\geq\sup\{a(w)-\norm{w-x_{0}}\colon w\in M\}$.
+	$r\geq\sup\Set{a(w)-\norm{w-x_{0}} |  w\in M}$.
 
 	Daher existiert ein $r\in\R$ mit $\norm{L_{r}}\leq1$ genau dann, wenn
 	das $r$ über dem Supremum und unter dem Infimum von oben liegt. Dies
@@ -2522,9 +2523,9 @@ Beweises müssen wir ein Lemma benutzen:
     \begin{enumerate}[1.\,Schr{i}tt]
      \item Sei $A\subset X$ eine abzählbare dichte Menge in $X$, d.\,h.
       $\cl(A)=X$. Dann sind die Mengen
-      $\CA_{1}\coloneqq\{\mathring{B}_{r}(a)\colon a\in A\wedge0<r\in\Q\}$ und
-      $\CA_{2}\coloneqq\{\mathring{B}_{r}(a)\in\CA_{1}\colon
-      \mathring{B}_{r}(a)\cap Y\neq\emptyset\}$ abzählbar. Für
+      $\CA_{1}\coloneqq\Set{\mathring{B}_{r}(a) |  a\in A\wedge0<r\in\Q}$ und
+      $\CA_{2}\coloneqq\Set{\mathring{B}_{r}(a)\in\CA_{1} |
+      \mathring{B}_{r}(a)\cap Y\neq\emptyset}$ abzählbar. Für
       $\mathring{B}_{r}(a)\in\CA_{2}$ wählt man ein
       $b\in\mathring{B}_{r}(a)\cap Y$ und erhält eine abzählbare Menge
       $B\subset Y$.
@@ -2545,7 +2546,7 @@ Beweises müssen wir ein Lemma benutzen:
   separabel.
   \begin{proof}
     Nach \autoref{lem:ii.46} ist mit $X'$ auch die Einheitssphäre $\partial
-    B_{X'}\coloneqq\{a\in X'\colon\norm{a}=1\}$ separabel. Sei also
+    B_{X'}\coloneqq\Set{a\in X' | \norm{a}=1}$ separabel. Sei also
     $\{a_{1},\dotsc\}\subset\partial B_{X'}$ dicht in $\partial B_{X'}$. Wähle
     nun $x_{i}\in\partial B_{X'}$ mit $\abs{a_{i}(x_{i})}\geq\nicefrac{1}{2}$.
     Wir setzen $M\coloneqq\spn\{x_{1},x_{2},\dotsc\}$ und zeigen $\cl(M)=X$.
@@ -3131,8 +3132,8 @@ Homöomorphimus.
 
 %satz II.5.13
 \begin{satz}
-  Sei $I$ eine Indexmenge. Dann besitzt $l_{\infty}(I)\coloneqq\{f\colon
-  I\rightarrow\K\colon\sup_{x\in I} \abs{f(x)}<\infty\}$ die metrische
+  Sei $I$ eine Indexmenge. Dann besitzt $l_{\infty}(I)\coloneqq\Set{f\colon
+  I\rightarrow\K | \sup_{x\in I} \abs{f(x)}<\infty}$ die metrische
   Fortsetzungseigenschaft.
   \begin{proof}
     Sei $J\colon X_{0}\rightarrow X$ eine metrische Injektion von einem
@@ -3409,12 +3410,12 @@ gleichbedeutend mit dem erstgenannten \autoref{satz:iii.11} ist der folgende
   $\sup_{T\in\CA}\norm{T}<\infty$, d.\,h. $\CA\subset\CL(X,Y)$ ist in
   $\CL(X,Y)$ eine beschränkte Menge.
   \begin{proof}
-    Wir setzen $A_{m}\coloneqq\{x\in X\colon\forall T\in\CA\colon\norm{Tx}\leq
-    m\}$ für eine natürliche Zahl $m$, d.\,h. $A_{m}= \bigcap_{T\in\CA} \{x\in
-    X\colon\norm{Tx}\leq m\}$. Die Mengen $A_{m}$ sind abgeschlossen, denn
-    $\{x\in X\colon\norm{Tx}\leq m\}$ abgeschlossen sind und für eine in $X$
-    konvergente Folge $(x_{n})\subset\{x\in X\colon\norm{Tx}\leq m\}$ ist zu
-    zeigen, dass $a\in\{x\in X\colon\norm{Tx}\leq m\}$. Wegen der
+    Wir setzen $A_{m}\coloneqq\Set{x\in X | \forall T\in\CA\colon\norm{Tx}\leq
+    m}$ für eine natürliche Zahl $m$, d.\,h. $A_{m}= \bigcap_{T\in\CA} \Set{x\in
+    X | \norm{Tx}\leq m}$. Die Mengen $A_{m}$ sind abgeschlossen, denn
+    $\Set{x\in X | \norm{Tx}\leq m}$ abgeschlossen sind und für eine in $X$
+    konvergente Folge $(x_{n})\subset\Set{x\in X | \norm{Tx}\leq m}$ ist zu
+    zeigen, dass $a\in\Set{x\in X | \norm{Tx}\leq m}$. Wegen der
     Stetigkeit von $T$ folgt aus $x_{n}\rightarrow a$ auch $Tx_{n}\rightarrow
     Ta$ und auch $\norm{Tx_{n}}\rightarrow\norm{Ta}$. Damit folgt wegen der
     Beschränktheit $\norm{Ta}\leq m$. Also liegt $a$ in der Menge.
@@ -3623,8 +3624,8 @@ gleichbedeutend mit dem erstgenannten \autoref{satz:iii.11} ist der folgende
 %satz iii.4.2
 \begin{satz}[Satz vom abgeschlossenen Graphen]
   Seien $X$ und $Y$ Banachräume und $T\colon X\rightarrow Y$ ein linearer
-  Operator. Dann ist der Graph von $T$, $\graph(T)\coloneqq\{(x,Tx)\in X\times
-  Y\colon x\in X\}$ im Banachraum $X\times Y$ versehen mit der
+  Operator. Dann ist der Graph von $T$, $\graph(T)\coloneqq\Set{(x,Tx)\in X\times
+  Y | x\in X}$ im Banachraum $X\times Y$ versehen mit der
   Norm\footnote{Auch andere Normen sind hier denkbar.}
   $\norm{(x,y)}\coloneqq\norm{x}_{X}+ \norm{y}_{Y}$ genau dann abgeschlossen,
   wenn $T\in\CL(X,Y)$ ein beschränkter linearer Operator ist.
@@ -3663,7 +3664,7 @@ gleichbedeutend mit dem erstgenannten \autoref{satz:iii.11} ist der folgende
   $Y$ heißt genau dann \highl{finit} oder \highl[Operator!finiter]{finiter
   Operator}, wenn $\dim R(T)=\dim T(X)<\infty$. Die Dimension des Bildraumes
   wird auch als Rang bezeichnet. Wir bezeichnen die Menge aller finiten
-  Operatoren mit $\CF\coloneqq\{T\in\CL(X,Y)\colon T\text{ finiter Operator}\}$.
+  Operatoren mit $\CF\coloneqq\Set{T\in\CL(X,Y) |  T\text{ finiter Operator}}$.
 \end{defini}
 
 
@@ -3725,9 +3726,9 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 
 %Vorlesung vom ...
 \begin{folg}
-  Sei $T\in\CF(X,Y), T\neq0$. Dann gilt: $\rg(T)= \min\{n\in\N\colon\exists
+  Sei $T\in\CF(X,Y), T\neq0$. Dann gilt: $\rg(T)= \min\Set{n\in\N | \exists
   a_{1},\dotsc, a_{n}\in X'\,\exists y_{1},\dotsc, y_{n}\in Y\colon T=
-  \sum_{i=1}^{n} a_{i}\otimes y_{i}\}$ und $\rg(0)\coloneqq0$.
+  \sum_{i=1}^{n} a_{i}\otimes y_{i}}$ und $\rg(0)\coloneqq0$.
   \begin{proof}
     folgt aus dem Beweis zu \autoref{satz:iv.11}
   \end{proof}
@@ -3746,7 +3747,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
   $N(P)$ und $R(P)$ abgeschlossene Teilräume von $X$ und es gilt,
   $\norm{P}\geq1$ oder $P=0$.
   \begin{proof}
-    Es ist $N(P)=\{x\in X\colon Px=0\}= P^{-1}(\{0\})$ abgeschlossen, da $P$
+    Es ist $N(P)=\Set{x\in X |  Px=0\}= P^{-1}(\{0})$ abgeschlossen, da $P$
     stetig. Es ist zu zeigen, dass $R(P)$ abgeschlossen ist. Dazu zeigen wir,
     dass $R(P)= N(I-P)$. Für die Inklusion $\supseteq$ gilt: $x\in
     N(I-P)\Rightarrow (I-P)x=0\Rightarrow Px=x\in R(P)$. Für die umgekehrte
@@ -3827,7 +3828,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
   Seien $X$ und $Y$ Banachräume und $T\in\CL(X,Y)$. Die $n$"~te
   \highl{Approximationszahl} von $T$ ist definiert durch:
   \begin{gather*}
-    a_{n}(T)\coloneqq\inf\{\norm{T-A}\colon A\in\CF(X,Y), \rg(A)<n\}
+    a_{n}(T)\coloneqq\inf\Set{\norm{T-A} |  A\in\CF(X,Y), \rg(A)<n}
   \end{gather*}
 \end{defini}
 
@@ -3876,7 +3877,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 \begin{defini}
   Es bezeichne
   \begin{align*}
-    \CA(X,Y) &\coloneqq\{T\in\CL(X,Y)\colon T \text{ approximierbar}\}\\
+    \CA(X,Y) &\coloneqq\Set{T\in\CL(X,Y) |  T \text{ approximierbar}}\\
     \CL      &\coloneqq\bigcup_{X,Y} \CL(X,Y)\\
     \CF      &\coloneqq\bigcup_{X,Y} \CF(X,Y)\\
     \CA      &\coloneqq\bigcup_{X,Y} \CA(X,Y)
@@ -3981,9 +3982,9 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
   Seien $X$ und $Y$ Banachräume, $T\in\CL(X,Y)$ und $n$ eine natürliche Zahl.
   Die $n$"~te \highl{Entropiezahl} von $T$ ist definiert durch:
   \begin{gather*}
-    \CE_{n}(T)\coloneqq \inf\{\epsilon\geq0\colon \exists y_{1},\dotsc,
+    \CE_{n}(T)\coloneqq \inf\Set{\epsilon\geq0 | \exists y_{1},\dotsc,
        y_{n}\in Y\colon T(B_{x})\subseteq\bigcup_{i=1}^{n} (\{y_{i}\}+
-       \epsilon By)\}
+       \epsilon By)}
   \end{gather*}
 \end{defini}
 
@@ -4065,7 +4066,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
       \{J\tilde{y}\}+2rJ(B_{y})$. Also folgt \autoref{eq:39}.
 
       Nun kombinieren wir die obigen Inklusionen und es folgt,
-      $(\{\tilde{y_{i}}\}+ rB\colon\tilde{y})\cap J(Y)\subset \{Jy_{i}\}+
+      $(\Set{\tilde{y_{i}}\}+ rB | \tilde{y})\cap J(Y)\subset \{Jy_{i}}+
       2rJ(B_{y})= J(\{y_{i}\}+2rB_{y})\Rightarrow (JT)(B_{x})\subset
       \bigcup_{i=1}^{n} (\{y_{i}\}+ rB_{\tilde{y}})\cap J(Y)\subset
       \bigcup_{i=1}^{n} J(\{y_{i}\}+ 2rB_{y})= J(\bigcup_{i=1}^{n}
@@ -4175,7 +4176,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 
 \begin{defini}
   \begin{enumerate}[(i)]
-   \item $\CK(X,Y)\coloneqq\{T\in\CL(X,Y)\colon T\text{ kompakt}\}$
+   \item $\CK(X,Y)\coloneqq\Set{T\in\CL(X,Y) |  T\text{ kompakt}}$
    \item $\CK\coloneqq \bigcup_{X,Y} \CK(X,Y)$ die Klasse der kompakten
     Operatoren zwischen beliebigen Banachräumen.
   \end{enumerate}
@@ -4504,7 +4505,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 \begin{satz}[Projektionssatz]
   Sei $K$ eine nichtleere, abgeschlossene und konvexe Teilmenge eines
   Hilbertraumes $H$. Dann existiert für jedes $x\in H$ genau ein $k\in K$ mit
-  $\norm{x-k}\coloneqq d(x,k)= \inf\{\norm{x-n}\colon n\in K\}$. Die Abbildung
+  $\norm{x-k}\coloneqq d(x,k)= \inf\Set{\norm{x-n} |  n\in K}$. Die Abbildung
   $P\colon H\rightarrow H$ mit $Px=k$ heißt \highl{Projektion}, d.\,h.
   $P^{2}=P$. Im Allgemeinen ist sie nicht linear.
   \begin{proof}
@@ -4524,13 +4525,13 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 \chapter{Übungsaufgaben}
 \section{Aufgaben zu normierten Räumen}
 
-Wir betrachten Folgenräume $l_{p}\coloneqq l_{p}(\K)\coloneqq  \{x=(\xi_{1},
-\xi_{2},\dotsc)\colon \xi_{i}\in\K, \sum_{i=1}^{\infty}
-\abs{\xi_{i}}^{p}<\infty\}$ mit $0<p\leq\infty$ und
+Wir betrachten Folgenräume $l_{p}\coloneqq l_{p}(\K)\coloneqq  \Set{x=(\xi_{1},
+\xi_{2},\dotsc) | \xi_{i}\in\K, \sum_{i=1}^{\infty}
+\abs{\xi_{i}}^{p}<\infty}$ mit $0<p\leq\infty$ und
 $\norm{x}_{p}\coloneqq (\sum_{i=1}^{\infty} \abs{\xi_{i}}^{p})^{\nicefrac{1}{p}}$
-mit $0<p<\infty$. Weiter ist $l_{\infty}\coloneqq l_{\infty}(\K)\coloneqq \{x=
-(\xi_{1}, \xi_{2},\dotsc)\colon \xi_{i}\in\K, \sup_{1\leq i<\infty}
-\abs{\xi_{i}}<\infty\}$. Dann kann man folgende Norm festlegen:
+mit $0<p<\infty$. Weiter ist $l_{\infty}\coloneqq l_{\infty}(\K)\coloneqq \Set{x=
+(\xi_{1}, \xi_{2},\dotsc) | \xi_{i}\in\K, \sup_{1\leq i<\infty}
+\abs{\xi_{i}}<\infty}$. Dann kann man folgende Norm festlegen:
 $\norm{x}_{\infty}\coloneqq \sup_{1\leq i<\infty} \abs{\xi_{i}}$. Seien
 $x=(\xi_{i}), y=(\eta_{i})$, so schreibt man $x\cdot y=(\xi_{i}\eta_{i}),
 x+y\coloneqq (\xi_{i}+\eta_{i})$ und $\lambda x\coloneqq (\lambda\xi_{i})$ für $\lambda\in\K$.
@@ -4602,14 +4603,14 @@ x+y\coloneqq (\xi_{i}+\eta_{i})$ und $\lambda x\coloneqq (\lambda\xi_{i})$ für 
  \item Man zeige, dass $l_{p}$ für $1\leq p<\infty$ separabel und $l_{\infty}$
   nicht separabel ist.
   \begin{enumerate}
-   \item Sei $e_{n}$ der $n$"~te Einheitsvektor und $A=\{e_{n}\colon
-    n\in\N\}$. Da $A$ abzählbar ist und $\norm{e_{i}}_{p}=1$, gilt
+   \item Sei $e_{n}$ der $n$"~te Einheitsvektor und $A=\Set{e_{n} |
+    n\in\N}$. Da $A$ abzählbar ist und $\norm{e_{i}}_{p}=1$, gilt
     $A\subset\ell_{p}$. Weiter ist auch $\ell_{p}\subset\cl(A)$, denn für
     $x=(\xi_{n})_{n\in\ell_{p}}$ gilt: $\norm{x-\sum_{i=1}^{n} \xi_{i}
     e_{i}}_{p}= \left(\sum_{i=n+1}^{\infty}
     \abs{\xi_{i}}^{p}\right)^{\nicefrac{1}{p}}
     \xrightarrow{n\rightarrow\infty} 0$.
-   \item Sei $X=\{x\colon\N\rightarrow\{0,1\}\}$. Dann ist
+   \item Sei $X=\Set{x | \N\rightarrow\{0,1\}}$. Dann ist
     $X\subset\ell_{\infty}$ und $X$ überabzählbar. Der letztgenannte Fakt kann
     mit dem \textsc{Cantor}schen Diagonalisierungsverfahren nachgewiesen
     werden. Weiterhin trägt $(X,\norm{\cdot})$ die diskrete Metrik. Nun wird
@@ -4632,8 +4633,9 @@ x+y\coloneqq (\xi_{i}+\eta_{i})$ und $\lambda x\coloneqq (\lambda\xi_{i})$ für 
 %Aufgabe 5
 \begin{enumerate}[{A}ufg{a}be 1]
  \item Es gilt $\norm{T}=\sup_{\norm{x}<1} \norm{Tx}= \sup_{\norm{x}=1}
-  \norm{Tx}= \sup_{x\neq0} \frac{\norm{Tx}}{\norm{x}}=\inf\{c\geq0\colon
-  \forall x\in X\colon\norm{Tx}\leq c\norm{x}\}$.\\
+  \norm{Tx}= \sup_{x\neq0} \frac{\norm{Tx}}{\norm{x}}=\inf\Set{c\geq0 |
+  \forall x\in X\colon\norm{Tx}\leq c\norm{x}}$.
+  
   Sei $\alpha\coloneqq \sup_{\norm{x}<1} \norm{Tx}$. Es ist klar, dass
   $\norm{T}\geq\alpha$ gilt. Sei nun $\epsilon>0$ und $x\in X$ beliebig. Dann
   ist $\frac{1}{\norm{x}+\epsilon} \norm{Tx}=
@@ -4656,8 +4658,8 @@ x+y\coloneqq (\xi_{i}+\eta_{i})$ und $\lambda x\coloneqq (\lambda\xi_{i})$ für 
   \norm{T}\geq\gamma-\epsilon\Rightarrow\norm{T}\geq\gamma$ für
   $\epsilon\rightarrow0$.
 
-  Sei $A\coloneqq \inf\{c\geq0\colon\forall x\in X\colon\norm{Tx}\leq
-  c\norm{x}\}$ und $c>A$. Dann gilt für alle $x\in X$: $\norm{Tx}\leq
+  Sei $A\coloneqq \inf\Set{c\geq0 | \forall x\in X\colon\norm{Tx}\leq
+  c\norm{x}}$ und $c>A$. Dann gilt für alle $x\in X$: $\norm{Tx}\leq
   c\norm{x}\Rightarrow\norm{T}\leq c\Rightarrow\norm{T}\leq A$. Wegen
   $\norm{Tx}\leq\norm{T} \norm{x}$ folgt, dass $A\leq\norm{T}$.
 \end{enumerate}
@@ -4711,9 +4713,9 @@ x+y\coloneqq (\xi_{i}+\eta_{i})$ und $\lambda x\coloneqq (\lambda\xi_{i})$ für 
   nicht stetig. Auch dieser Beweis ist nicht perfekt. Er wurde aber in der
   Übung akzeptiert.
   
- \item Seien $E\coloneqq\{x\in C[0,1]\colon x(1)=0\}, \norm{\cdot}_{\infty}=
-  \sup\abs{\cdot}$ ein normierter Raum, $M\coloneqq\{x\in E\colon\inner_{0}^{1}
-  x(s)\,ds=0\}$. Dann ist $E$ bezüglich $\norm{\cdot}_{\infty}$ ein normierter
+ \item Seien $E\coloneqq\Set{x\in C[0,1] |  x(1)=0}, \norm{\cdot}_{\infty}=
+  \sup\abs{\cdot}$ ein normierter Raum, $M\coloneqq\Set{x\in E | \inner_{0}^{1}
+  x(s)\,ds=0}$. Dann ist $E$ bezüglich $\norm{\cdot}_{\infty}$ ein normierter
   Raum und $M\subsetneq E$ ein abgeschlossener linearer Teilraum. Man zeige,
   dass $\forall x\in E\colon\norm{x}_{\infty}=1\Rightarrow d(x,M)<1$. (Lösung
   siehe \cite{werner04})\\
