Schreibfehler in Definition der Entropiezahl korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@3684 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -3984,7 +3984,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
   \begin{gather*}
     \CE_{n}(T)\coloneqq \inf\Set{\epsilon\geq0 | \exists y_{1},\dotsc,
        y_{n}\in Y\colon T(B_{x})\subseteq\bigcup_{i=1}^{n} (\{y_{i}\}+
-       \epsilon By)}
+       \epsilon B_{Y})}
   \end{gather*}
 \end{defini}
 
